--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,10 @@
 # Site settings
-title:
+title: Chickadee Perch LLC
 email:
-description: > # this means to ignore newlines until "baseurl:"
+description: Affordable housing in Bulter, PA
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+url: "http://chickadeeperch.com" # the base hostname & protocol for your site
 
-twitter_username:
-github_username:
 
 # Build settings
 markdown: kramdown
